# RTDB

./: .gitignore  BENCHMARKS.md  Cargo.toml  Dockerfile  README.md  RTDB_TODO.md  build.rs  docker-compose.simple.yml  docker-compose.yml  errors.txt  fix_all.py  fix_cargo_toml.py  fix_inner_jepsen.py  fix_inner_jepsen2.py  fix_inner_jepsen3.py  fix_jepsen.py  fix_jepsen_final.py  fix_jepsen_final2.py  fix_jepsen_final3.py  fix_jepsen_final4.py  fix_jepsen_final5.py  fix_jepsen_final6.py  fix_jepsen_more.py  fix_mods.py  fix_mods2.py  fix_summary.py  test_mod.py  update_example_features.py  warnings.txt
.kiro/settings/: mcp.json
benches/: competitive_benchmark.rs  grpc_benchmark.rs  insert_benchmark.rs  migration_benchmark.rs  mixed_benchmark.rs  performance_validation_benchmark.rs  production_benchmark.rs  run_comparison.sh  search_benchmark.rs  simdx_benchmark.rs  simple_simdx_benchmark.rs  standalone_simdx_benchmark.rs  storage_benchmark.rs  vector_benchmark.rs  vector_search_benchmark.rs
config/: jepsen.yaml  prometheus.yml
config/grafana/dashboards/: rtdb.json
config/monitoring/: alert-rules.yml  alertmanager.yml  grafana-dashboard.json
data/fresh_test/: config.json
data/jepsen_collection/: config.json
docs/: ADVANCED_FEATURES_SUMMARY.md  BENCHMARK_SUMMARY.md  COMPARISON_MATRIX.csv  COMPETITIVE_ANALYSIS.md  GRPC_API.md  HFT_HTTP_OPTIMIZATIONS.md  JEPSEN_TESTING.md  MIGRATION_TOOLS.md  PARQUET_FIX_SUMMARY.md  PRODUCTION_IMPLEMENTATION_SUMMARY.md  RAG_COMPARISON.md  RAG_SCORECARD.md  README_PRODUCTION_FEATURES.md  REST_API.md  SIMDX_INTEGRATION.md  SIMDX_PERFORMANCE_RESULTS.md  grpc-benchmark-expected-results.md  grpc-implementation-summary.md  grpc-optimizations.md
examples/: advanced_features_demo.rs  cdc_streaming_example.rs  grpc_client_test.rs  parquet_migration_example.rs  parquet_streaming_example.rs  production_deployment.rs
helm/rtdb/: Chart.yaml  values.yaml
helm/rtdb/templates/: _helpers.tpl  deployment.yaml  service.yaml
proto/: collections.proto  common.proto  milvus.proto  points.proto  qdrant.proto  schema.proto
scripts/: run-grpc-benchmarks.sh  run-jepsen-tests.sh  run-production-benchmarks.sh
sdk/go/: circuit_breaker.go  client.go  go.mod  go.sum  metrics.go
sdk/go/examples/: basic_usage.go
sdk/java/: pom.xml
sdk/java/src/main/java/com/rtdb/client/: RtdbClient.java  RtdbConfig.java  SIMDXOptimizer.java
sdk/javascript/: .eslintrc.js  .gitignore  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  README.md  jest.config.js  package-lock.json  package.json  rollup.config.js  tsconfig.json
sdk/javascript/benchmarks/: performance.js
sdk/javascript/examples/: advanced-features.js  basic-usage.js
sdk/javascript/scripts/: build.sh
sdk/javascript/src/: client.ts  http-client.ts  index.ts  types.ts  utils.ts
sdk/javascript/tests/: client.test.ts  integration.test.ts  setup.ts  utils.test.ts
sdk/python/: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
sdk/python/examples/: basic_usage.py  batch_operations.py
sdk/python/rtdb_sdk/: __init__.py  client.py  rtdb_python.pyi
sdk/python/src/: lib.rs
sdk/python/tests/: __init__.py  test_client.py  test_integration.py
sdk/rust/: Cargo.toml
sdk/rust/benches/: client_benchmark.rs
sdk/rust/src/: client.rs  config.rs  error.rs  lib.rs  metrics.rs  resilience.rs  types.rs
src/: filter.rs  lib.rs  main.rs  testing.rs
src/api/: enhanced_router.rs  error.rs  grpc.rs  middleware.rs  milvus_compat.rs  mod.rs  performance.rs  qdrant_compat.rs  rest.rs  validation.rs  weaviate_compat.rs
src/auth/: middleware.rs  mod.rs  rbac.rs
src/cli/: mod.rs  mod.rs.backup  mod_broken.rs
src/client/: grpc_client.rs  mod.rs  optimized_http.rs
src/cluster/: client.rs  config.rs  failover.rs  hash_ring.rs  mod.rs  proto.rs  raft.rs  raft_apply.rs  raft_service.rs  raft_transport.rs  replication.rs  rpc.proto  server.rs  storage_router.rs
src/cluster/raft/: mod.rs  node.rs  runtime.rs  storage.rs  types.rs
src/collection/: mod.rs
src/config/: default.yaml  mod.rs
src/cross_region/: mod.rs
src/distance/: mod.rs
src/gpu/: cuda.rs  kernels.rs  metal.rs  mod.rs  rocm.rs
src/index/: distance.rs  hnsw.rs  hnsw_optimized.rs  hybrid_search.rs  learned.rs  mod.rs  quantization.rs  vector_index.rs
src/jepsen/: bug_condition_test.rs  checkers.rs  direct_client.rs  direct_client_batched.rs  direct_client_optimized.rs  direct_client_sync_batched.rs  generators.rs  high_perf_store.rs  history.rs  mod.rs  nemesis.rs  operations.rs  production_tests.rs  tests.rs  workloads.rs
src/k8s/: mod.rs  operator.rs
src/migration/: checkpoint.rs  cli.rs  clients.rs  formats.rs  mod.rs  parquet_integration_test.rs  parquet_streaming.rs  parquet_streaming_tests.rs  progress.rs  simd_optimized.rs  strategies.rs  tests.rs  validation.rs
src/multimodal/: mod.rs
src/observability/: health.rs  logging.rs  metrics.rs  mod.rs  performance.rs  server.rs  tracing.rs
src/quantization/: advanced.rs  mod.rs  product.rs
src/query/: mod.rs
src/replication/: cross_region.rs  mod.rs
src/sdk/: mod.rs  rust_client.rs
src/security/: audit.rs  mod.rs
src/simdx/: advanced_optimizations.rs  mod.rs
src/smart/: context.rs  knowledge_graph.rs  mod.rs  query_intel.rs
src/storage/: backup.rs  engine.rs  memtable.rs  mmap.rs  mod.rs  snapshot.rs  sstable.rs  wal.rs
src/streaming/: mod.rs  server.rs
src/telemetry/: health.rs  metrics.rs  mod.rs  tracing.rs
src/testing/: load_test.rs
src/wasm/: mod.rs
tests/: chaos_tests.rs  final_benchmark.rs  integration_test.rs  integration_tests.rs  jepsen_bug_condition_exploration.rs  jepsen_performance_comparison.rs  jepsen_preservation_property_tests.rs  jepsen_tests.rs  microbenchmark.rs  milvus_api_test.rs  optimized_benchmark.rs  quick_optimized_benchmark.rs  rest_api_test.rs  test_api_direct.rs  test_jepsen.rs  weaviate_api_test.rs
tests/common/: mod.rs
