[package]
name = "rtdb"
version = "0.1.0"
edition = "2021"
authors = ["RTDB Team"]
description = "Production-Grade Smart Vector Database"
license = "Apache-2.0"
repository = "https://github.com/iceyxsm/RTDB"
keywords = ["vector-database", "rag", "search", "embedding", "ann"]
categories = ["database", "data-structures"]
rust-version = "1.75"

[[bin]]
name = "rtdb"
path = "src/main.rs"

[lib]
name = "rtdb"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
protobuf = "3.3"
prost = "0.12"
prost-types = "0.12"

# HTTP/gRPC
axum = { version = "0.7", features = ["http2", "tokio"] }
tonic = { version = "0.11", features = ["transport", "codegen", "prost"] }
tower = { version = "0.4", features = ["full"] }
hyper = { version = "1.1", features = ["full"] }

# Storage
crc32c = "0.6"
bytes = "1.5"
memmap2 = "0.9"
page_size = "0.6"

# Data structures
dashmap = "5.5"
crossbeam = "0.8"
crossbeam-skiplist = "0.1"
parking_lot = "0.12"

# SIMD and math
nalgebra = { version = "0.32", features = ["serde-serialize"] }
wide = "0.7"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Configuration
config = { version = "0.14", default-features = false, features = ["yaml"] }
clap = { version = "4.4", features = ["derive", "env"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
itertools = "0.12"
tar = "0.4"
flate2 = "1.0"
tempfile = "3.9"
rayon = "1.8"
once_cell = "1.19"
rand = "0.8"
ordered-float = "4.2"
serde_yaml = { version = "0.9.34", default-features = false }
num_cpus = "1.17.0"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.4"
tempfile = "3.9"

[build-dependencies]
tonic-build = "0.11"

[[bench]]
name = "storage_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
