[package]
name = "rtdb"
version = "0.1.0"
edition = "2021"
authors = ["RTDB Team"]
description = "Production-Grade Smart Vector Database"
license = "Apache-2.0"
repository = "https://github.com/iceyxsm/RTDB"
keywords = ["vector-database", "rag", "search", "embedding", "ann"]
categories = ["database", "data-structures"]
rust-version = "1.75"

[features]
default = []
grpc = ["tonic", "prost", "dep:warp"]
hdf5 = ["dep:hdf5", "dep:ndarray"]
# Regenerate protobuf code from .proto files (requires protoc)
regenerate-proto = []
tonic = ["dep:tonic"]
prost = ["dep:prost"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(grpc_enabled)'] }

[[bin]]
name = "rtdb"
path = "src/main.rs"

[[bin]]
name = "rtdb-migrate"
path = "src/bin/rtdb-migrate.rs"

[[bin]]
name = "rtdb-jepsen"
path = "src/bin/rtdb-jepsen.rs"

[lib]
name = "rtdb"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
async-trait = { version = "0.1" }
async-stream = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
protobuf = "3.3"
prost = { version = "0.12", optional = true }
prost-types = "0.12"

# HTTP/gRPC
axum = { version = "0.7", features = ["http2", "tokio"] }
warp = { version = "0.3", optional = true }
tonic = { version = "0.11", features = ["transport", "codegen", "prost"], optional = true }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["compression-gzip", "cors", "trace"] }
hyper = { version = "1.1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "gzip"] }
regex = "1.10"
url = "2.5"

# Storage
crc32c = "0.6"
bytes = "1.5"
memmap2 = "0.9"
page_size = "0.6"

# Data structures
dashmap = "5.5"
crossbeam = "0.8"
crossbeam-skiplist = "0.1"
parking_lot = "0.12"

# SIMD and math
nalgebra = { version = "0.32", features = ["serde-serialize"] }
wide = "0.7"
simsimd = "5.9"  # Industry-leading SIMD library for 200x performance gains

# GPU acceleration (optional, for production deployment)
# cudarc = { version = "0.11", optional = true }
# candle-core = { version = "0.6", optional = true }
# tch = { version = "0.15", optional = true }

# WebAssembly runtime
wasmtime = { version = "25.0", features = ["component-model", "async"] }
wasmtime-wasi = "25.0"

# Advanced quantization and load testing
rand = "0.8"
rand_distr = "0.4"

# Kubernetes operator dependencies
kube = { version = "0.95", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.23", features = ["latest"] }
schemars = "0.8"

# Load testing and benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Production-grade error handling and resilience
backoff = "0.4"
circuit_breaker = "0.1"
half = "2.4"  # Half-precision floating point support

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.23"
tracing-log = "0.2"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
prometheus = { version = "0.13", features = ["process"] }

# OpenTelemetry
opentelemetry = "0.23"
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
opentelemetry-otlp = "0.16"

# Hostname detection
hostname = "0.4"

# Configuration
config = { version = "0.14", default-features = false, features = ["yaml"] }
clap = { version = "4.4", features = ["derive", "env"] }

# Migration tools dependencies
indicatif = "0.17"
qdrant-client = "1.11"

# Serialization (binary)
bincode = "1.3"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
constant_time_eq = "0.3"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
itertools = "0.12"
tar = "0.4"
flate2 = "1.0"
tempfile = "3.9"
rayon = "1.8"
once_cell = "1.19"
ordered-float = "4.2"
serde_yaml = { version = "0.9.34", default-features = false }
num_cpus = "1.17.0"
sha2 = "0.10"
zstd = "0.13"
futures = "0.3"

# Migration format support
parquet = { version = "53.0", features = ["arrow", "async", "json"] }
arrow = { version = "53.0", features = ["csv", "json"] }
arrow-array = "53.0"
arrow-schema = "53.0"
hdf5 = { version = "0.8", optional = true }
ndarray = { version = "0.15", optional = true }
csv = "1.3"
base64 = "0.22"

# Jepsen testing dependencies
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.4"
tempfile = "3.9"
rayon = "1.8"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"

[build-dependencies]
tonic-build = "0.11"

[[bench]]
name = "standalone_simdx_benchmark"
harness = false

[[bench]]
name = "simple_simdx_benchmark"
harness = false

[[bench]]
name = "simdx_benchmark"
harness = false

[[bench]]
name = "storage_benchmark"
harness = false

[[bench]]
name = "search_benchmark"
harness = false

[[bench]]
name = "insert_benchmark"
harness = false

[[bench]]
name = "mixed_benchmark"
harness = false

[[bench]]
name = "grpc_benchmark"
harness = false
required-features = ["grpc"]

[[bench]]
name = "production_benchmark"
harness = false

[[bench]]
name = "competitive_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
